force-app/main/default/objects/StatusHistory__c/StatusHistory__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC100918 - Created for BREG phase 1</description>
    <label>Status History</label>
    <nameField>
        <displayFormat>SH-{0000}</displayFormat>
        <label>Status History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Histories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>