force-app/main/default/objects/StatusHistory__c/fields/AgeDays__c.field-meta.xml
<CustomField>
    <fullName>AgeDays__c</fullName>
    <description>PacPoint-MV032719 - Created for BREG phase 1</description>
    <formula>EndDateFormula__c  -  StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>