force-app/main/default/objects/StatusHistory__c/fields/AgeHours__c.field-meta.xml
<CustomField>
    <fullName>AgeHours__c</fullName>
    <description>PacPoint-MV032719 - Created for BREG phase 1</description>
    <formula>AgeDays__c *24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>