force-app/main/default/objects/StatusHistory__c/fields/DateEdited__c.field-meta.xml
<CustomField>
    <fullName>DateEdited__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>DateEdited</label>
    <type>DateTime</type>
</CustomField>