force-app/main/default/objects/StatusHistory__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>PacPoint-MV012319 - Created for BREG phase 1</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>