force-app/main/default/objects/StatusHistory__c/fields/EndDateFormula__c.field-meta.xml
<CustomField>
    <fullName>EndDateFormula__c</fullName>
    <formula>IF(ISNULL(EndDate__c), NOW(), EndDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date (Formula)</label>
    <type>DateTime</type>
</CustomField>