force-app/main/default/objects/StatusHistory__c/fields/Filing__c.field-meta.xml
<CustomField>
    <fullName>Filing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>Filing</label>
    <referenceTo>Filing__c</referenceTo>
    <relationshipLabel>Status Histories</relationshipLabel>
    <relationshipName>StatusHistories</relationshipName>
    <type>Lookup</type>
</CustomField>