force-app/main/default/objects/StatusHistory__c/fields/FY_Age__c.field-meta.xml
<CustomField>
    <fullName>FY_Age__c</fullName>
    <formula>(IF(
OR(
ISBLANK((EndDateFormula__c) ),
EndDateFormula__c &gt; (NOW()-167)
), 
NOW() - 167, 
EndDateFormula__c) )


- StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FY Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>