force-app/main/default/objects/StatusHistory__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-JB103118 - Created for BREG phase 1</description>
    <label>Investigation</label>
    <referenceTo>Investigation__c</referenceTo>
    <relationshipLabel>Status Histories</relationshipLabel>
    <relationshipName>StatusHistories</relationshipName>
    <type>Lookup</type>
</CustomField>