force-app/main/default/objects/StatusHistory__c/fields/ModifiedByID__c.field-meta.xml
<CustomField>
    <fullName>ModifiedByID__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>ModifiedByID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>