force-app/main/default/objects/StatusHistory__c/fields/ModifiedByName__c.field-meta.xml
<CustomField>
    <fullName>ModifiedByName__c</fullName>
    <description>PacPoint-IC100918 - Created for BREG phase 1</description>
    <label>ModifiedByName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>