force-app/main/default/objects/StatusHistory__c/fields/NewStatusValue__c.field-meta.xml
<CustomField>
    <fullName>NewStatusValue__c</fullName>
    <description>PacPoint-IC100918 - Created for BREG phase 1</description>
    <label>New Status Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>