force-app/main/default/objects/StatusHistory__c/fields/PriorStatusValue__c.field-meta.xml
<CustomField>
    <fullName>PriorStatusValue__c</fullName>
    <description>PacPoint-IC100918 - Created for BREG phase 1</description>
    <label>Prior Status Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>