force-app/main/default/objects/StatusHistory__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <description>PacPoint-JB103118 - Created for BREG phase 1</description>
    <formula>IF(NOT(ISBLANK(Exam__c)), HYPERLINK(&quot;https://hi-dcca--dev.cs33.my.salesforce.com/&quot;&amp; Exam__r.Id, Exam__r.Name), IF(NOT(ISBLANK(Filing__c)), HYPERLINK(&quot;https://hi-dcca--dev.cs33.my.salesforce.com/&quot;&amp; Filing__r.Id, Filing__r.Name), IF(NOT(ISBLANK(SEBCase__c)), HYPERLINK(&quot;https://hi-dcca--dev.cs33.my.salesforce.com/&quot;&amp; SEBCase__r.Id, SEBCase__r.Name), IF(NOT(ISBLANK(Transaction__c)), HYPERLINK(&quot;https://hi-dcca--dev.cs33.my.salesforce.com/&quot;&amp; Transaction__r.Id, Transaction__r.TransactionId__c),&apos;&apos;))))</formula>
    <label>Record</label>
    <type>Text</type>
</CustomField>