force-app/main/default/objects/StatusHistory__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>PacPoint-MV012319 - Created for BREG phase 1</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>