force-app/main/default/objects/StatusHistory__c/fields/StatusHistoryType__c.field-meta.xml
<CustomField>
    <fullName>StatusHistoryType__c</fullName>
    <description>PacPoint-IC100918 - Created for BREG phase 1</description>
    <label>Status History Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exam</fullName>
            </value>
            <value>
                <fullName>Filing</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>SEBCase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>