force-app/main/default/objects/StatusHistory__c/fields/StatusValue__c.field-meta.xml
<CustomField>
    <fullName>StatusValue__c</fullName>
    <description>PacPoint-IC100918 - Created for BREG phase 1</description>
    <label>Status Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>