force-app/main/default/objects/StatusHistory__c/fields/TimeframeCountMonths__c.field-meta.xml
<CustomField>
    <fullName>TimeframeCountMonths__c</fullName>
    <description>PacPoint-IC051319 - Created for BREG phase 1
This is used on the Timeframe field calculation. 
If today is greater than the start date, count the months passed. 
If not, pass -1 value.</description>
    <formula>IF( 
TODAY() &gt;= DATEVALUE( StartDate__c ), 
( 
FLOOR(((TODAY() - DATEVALUE( StartDate__c )) / 365 * 12)) 
), 
-1)</formula>
    <label>Timeframe Count Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>