force-app/main/default/objects/StatusHistory__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-IC101018 - Created for BREG phase 1</description>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Status Histories</relationshipLabel>
    <relationshipName>Status_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>