force-app/main/default/objects/StatusHistory__c/fields/WhatChanged__c.field-meta.xml
<CustomField>
    <fullName>WhatChanged__c</fullName>
    <description>PacPoint-IC100918 - Created for BREG phase 1</description>
    <formula>&quot;Status Changed from &quot;+  PriorStatusValue__c    + &quot; to &quot; +   NewStatusValue__c</formula>
    <label>What Changed?</label>
    <type>Text</type>
</CustomField>