force-app/main/default/objects/StatusHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Record__c</columns>
    <columns>StatusHistoryType__c</columns>
    <columns>WhatChanged__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>